[package]
name = "build_script"
version = "0.1.4"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A wrapper for build.rs instructions"
repository = "https://github.com/ALinuxPerson/build_script"
keywords = ["script", "build-script", "build", "build-rs"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
gag = "0.1.10"
serial_test = "0.5.1"
