[package]
name = "build_script"
version = "0.2.0"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A wrapper for build.rs instructions"
repository = "https://github.com/ALinuxPerson/build_script"
keywords = ["script", "build-script", "build", "build-rs"]
categories = ["development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

[dev-dependencies]
gag = "0.1.10"
serial_test = "0.5.1"

[features]
